--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,8 @@ steps:
     goals: 'package'
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '$(agent.builddirectory)'
-    Contents: '**\.war\**'
+    SourceFolder: '$(system.defaultworkingdirectory)'
+    Contents: '**'
     TargetFolder: '$(build.artifactstagingdirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
